Contributors and fixed issues w BS styles conflicting w site styles

--- a/_layouts/acs-aem-samples_base.html
+++ b/_layouts/acs-aem-samples_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include shared/head.html project=site.data.acs-aem-samples.name %}
 
-    <body>
+    <body class="acs-aem-samples">
         {% include shared/analytics.html %}
 
         {{ content }}
