--- a/_layouts/acs-aem-tools_base.html
+++ b/_layouts/acs-aem-tools_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include shared/head.html project=site.data.acs-aem-tools.name %}
 
-    <body>
+    <body class="acs-aem-tools">
     {{ content }}
 
     {% include shared/footer.html %}
