--- a/_sass/_shared.scss
+++ b/_sass/_shared.scss
@@ -10,6 +10,7 @@
 @import "feature-cards";
 @import "feature-docs";
 @import "quick-links";
+@import "contributors";
 
 .color-block {
   background: no-repeat center top fixed;
