--- a/_layouts/acs-aem-commons_base.html
+++ b/_layouts/acs-aem-commons_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include shared/head.html project=site.data.acs-aem-commons.name %}
 
-    <body>
+    <body class="acs-aem-commons">
         {{ content }}
         
         {% include shared/footer.html %}
