--- a/_layouts/acs-aem-projects_base.html
+++ b/_layouts/acs-aem-projects_base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include shared/head.html project=site.data.acs-aem-projects.name %}
 
-    <body>
+    <body class="acs-aem-projects">
         {{ content }}
 
         {% include shared/footer.html %}
