--- a/assets/acs-aem-projects/css/styles.scss
+++ b/assets/acs-aem-projects/css/styles.scss
@@ -14,56 +14,58 @@ $dark-bg-color-light: lighten($dark-bg-color, 10%);
 
 @import "shared";
 
-a {
-  color: $color;
-
-  &:hover {
-    color: $color-dark;
-  }
-}
-
 .acs-aem-projects {
-  #jumbotron {
+	a {
+	  color: $color;
 
-    .wrapper {
-      margin-bottom: 2.5rem;
-    }
+	  &:hover {
+	    color: $color-dark;
+	  }
+	}
 
-    .message {
-      top: 0;
-      margin-bottom: 2rem;
-    }
+	.acs-aem-projects {
+	  #jumbotron {
 
-    .projects-wrapper {
-      .center {
-        width: 36%;
-        margin-top: 0;
-        margin-left: 2%;
-        margin-right: 2%;
-      }
+	    .wrapper {
+	      margin-bottom: 2.5rem;
+	    }
 
-      a {
-        float: left;
-        width: 30%;
-        height: auto;
-        margin-top: 3%;
-        margin-left: 0;
-        margin-right: 0;
+	    .message {
+	      top: 0;
+	      margin-bottom: 2rem;
+	    }
 
-        img {
-          height: auto;
-          margin: 0;
-          padding: 0;
-        }
-      }
-    }
-  }
+	    .projects-wrapper {
+	      .center {
+	        width: 36%;
+	        margin-top: 0;
+	        margin-left: 2%;
+	        margin-right: 2%;
+	      }
 
-  .color-block {
-    background: #2A073B url('/assets/acs-aem-projects/images/colored-bg.jpg');
-  }
+	      a {
+	        float: left;
+	        width: 30%;
+	        height: auto;
+	        margin-top: 3%;
+	        margin-left: 0;
+	        margin-right: 0;
 
-  .project-icons {
-    background-image: url('/assets/acs-aem-projects/images/icons-projects-w-gradient.png');
-  }
+	        img {
+	          height: auto;
+	          margin: 0;
+	          padding: 0;
+	        }
+	      }
+	    }
+	  }
+
+	  .color-block {
+	    background: #2A073B url('/assets/acs-aem-projects/images/colored-bg.jpg');
+	  }
+
+	  .project-icons {
+	    background-image: url('/assets/acs-aem-projects/images/icons-projects-w-gradient.png');
+	  }
+	}
 }
