--- a/_includes/acs-aem-commons/sub-features.html
+++ b/_includes/acs-aem-commons/sub-features.html
@@ -5,7 +5,7 @@
         {% for subpage in sorted %}
             {% capture subFeature %}{% if subpage.path contains currentPagePath and subpage.path != page.path %}true{% else %}false{% endif %}{% endcapture %}
             {% if subFeature == 'true' %}
-                {% include shared/feature-card.html feature=subpage project=site.data.acs-aem-commons.name %}
+                {% include shared/feature-card.html feature=subpage project=site.data.acs-aem-commons %}
             {% endif %}
         {% endfor %}
     </div>
