--- a/_includes/shared/feature-card.html
+++ b/_includes/shared/feature-card.html
@@ -2,15 +2,14 @@
 {% assign project = include.project %}
 
 <div class="feature" data-filter-tags="all {{ feature.feature-tags }}
-{% if feature.tags contains 'new' %} new
-{% elsif feature.tags contains 'legacy' %} legacy
-{% elsif feature.tags contains 'updated' %} updated {% endif %}">
+{% if feature.initial-release == project.version or feature.initial-release == project.version60 %} new
+{% elsif feature.last-updated-release == project.version or feature.last-updated-release == project.version60 %} updated {% endif %}">
     <a class="feature-image-wrapper" href="{{ feature.url }}">
 
         {% if feature.tags contains 'deprecated' %}<div class="deprecated"></div>
         {% elsif feature.tags contains 'beta' %}<div class="beta"></div>
-        {% elsif feature.tags contains 'new' %}<div class="new"></div>
-        {% elsif feature.tags contains 'updated' %}<div class="updated"></div>{% endif %}
+        {% elsif feature.initial-release contains project.version or feature.initial-release contains project.version60 %}<div class="new"></div>
+        {% elsif feature.last-updated-release contains project.version or feature.last-updated-release contains project.version60 %}<div class="updated"></div>{% endif %}
 		
         <img class="img-responsive"
              src="{{ feature.url }}/../thumbnail.png" alt="{{ feature.title }}"/></a>
