--- a/_layouts/acs-aem-commons_subpage.html
+++ b/_layouts/acs-aem-commons_subpage.html
@@ -4,6 +4,9 @@ layout: acs-aem-commons_default
 <script>
     digitalData.page.pageInfo.category.projectName = "ACS AEM Commons";
 </script>
+
+{% include shared/back.html %}
+
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
         <section class="feature-doc">
