fixed back-button bar, added banner--notice class, added notice to vlt-rcp and multifield extension feature.

--- a/_layouts/acs-aem-commons_default.html
+++ b/_layouts/acs-aem-commons_default.html
@@ -13,8 +13,12 @@ layout: acs-aem-commons_base
                 {% include acs-aem-commons/nav.html %}
             </div>
         </nav>
+
+        {% include shared/back.html %}
     </header>
 </div>
+
+
 
 <div class="page content" role="main">
     <div class="container">
