--- a/_layouts/acs-aem-tools_default.html
+++ b/_layouts/acs-aem-tools_default.html
@@ -13,6 +13,8 @@ layout: acs-aem-tools_base
                 {% include acs-aem-tools/nav.html %}
             </div>
         </nav>
+
+        {% include shared/back.html %}
     </header>
 </div>
 
