--- a/_includes/shared/back.html
+++ b/_includes/shared/back.html
@@ -1,13 +1,15 @@
-<div class="row back-button-wrapper">	
-	<div class="row back-button">
-	    <div class="col-md-10 col-md-offset-1">
-	        {% assign pathParts = page.path | remove: "index.md" | split: "/" %}
+{% assign pathParts = page.path | remove: "index.md" | split: "/" %}
 
-			{% if pathParts.size > 3 %}
-				<a href="../index.html">&lt; Back to the features</a>
-			{% else %}
-				<a href="../../#features">&lt; Back to the features</a>		
-			{% endif %}	
+{% if pathParts.size > 3 %}
+	<div class="back-button__bar">
+		<div class="container">
+			<a href="../index.html">&lt; Back to the features</a>
 		</div>
 	</div>
-</div>
+{% elsif pathParts.size > 2 %}
+	<div class="back-button__bar">
+		<div class="container">
+			<a href="../../#features">&lt; Back to the features</a>
+		</div>
+	</div>
+{% endif %}
