ACS AEM Commons 4.0.0 release

--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -13,7 +13,7 @@
                     class="action-btn">Download the AEM Package</a>
             </div>
 
-            <div class="banner">For AEM 6.2, 6.3 &amp; 6.4 use 3.x.x</div>
+            <div class="banner">ACS AEM Commons 4.0.0 supports AEM 6.3 and greater!</div>
         </div>
     </div>
 
