--- a/_layouts/acs-aem-commons_default.html
+++ b/_layouts/acs-aem-commons_default.html
@@ -14,11 +14,9 @@ layout: acs-aem-commons_base
             </div>
         </nav>
 
-        {% include shared/back.html %}
+        {% include shared/back.html baseUrl='acs-aem-commons' %}
     </header>
 </div>
-
-
 
 <div class="page content" role="main">
     <div class="container">
