--- a/_layouts/acs-aem-tools_default.html
+++ b/_layouts/acs-aem-tools_default.html
@@ -14,7 +14,7 @@ layout: acs-aem-tools_base
             </div>
         </nav>
 
-        {% include shared/back.html %}
+        {% include shared/back.html baseUrl='acs-aem-tools' %}
     </header>
 </div>
 
