--- a/_includes/acs-aem-commons/jumbotron-major-release.html
+++ b/_includes/acs-aem-commons/jumbotron-major-release.html
@@ -2,18 +2,18 @@
 
     <div class="container">
         <div class="wrapper image-on-top" style="position: relative">
-            <img class="img-responsive" src="/assets/acs-aem-commons/images/100th-release.png"/>
+            <img class="img-responsive" src="/assets/acs-aem-commons/images/party-release.png"/>
 
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
-                    <p class="lead">Version 3.18.0 celebrates our 100th release!</p>
+                    <p class="lead">Version 4.0.0 is here!</p>
                 </div>
                 <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
                     class="action-btn">Download the AEM Package</a>
             </div>
 
-            <div class="banner">For AEM 6.2, 6.3 &amp; 6.4 use 3.x.x</div>
+            <div class="banner">ACS AEM Commons 4.0.0 supports AEM 6.3 and greater!</div>
         </div>
     </div>
 
