--- a/_sass/_feature-filters.scss
+++ b/_sass/_feature-filters.scss
@@ -16,6 +16,7 @@
         display: inline-block;
         padding: .75em 1.5em;
         background-color: #eee;
+        text-decoration: none !important;
 
         &.active {
           color: white;
