--- a/_sass/_shared.scss
+++ b/_sass/_shared.scss
@@ -12,6 +12,7 @@
 @import "quick-links";
 @import "banners";
 @import "contributors";
+@import "black";
 
 .color-block {
   background: no-repeat center top fixed;
