--- a/assets/acs-aem-commons/css/styles.scss
+++ b/assets/acs-aem-commons/css/styles.scss
@@ -26,6 +26,7 @@ $dark-bg-color-dark: #bc2606;
 
 	.color-block {
 		background: #882021 url('/assets/acs-aem-commons/images/colored-bg.jpg');
+		background-size: cover;
 	}
 
 	table.data-table {	
@@ -54,3 +55,4 @@ $dark-bg-color-dark: #bc2606;
 		}
 	}
 }
+
