--- a/_includes/acs-aem-commons/wrapper-client-library.html
+++ b/_includes/acs-aem-commons/wrapper-client-library.html
@@ -2,7 +2,7 @@
 
 <div class="banner banner--info banner--inline">
     As of ACS AEM Commons 4.0.0, this
-    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/blob/master/content/src/main/content/jcr_root{{ path }}"
+    <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/blob/master/ui.apps/src/main/content/jcr_root/{{ path }}"
        target="_blank">Wrapper Client Library node definition</a>
     must be used to enable this feature.
 </div>
