Added reminder about adding empty js.txt and css.txt for wrapper client libraries

--- a/_includes/acs-aem-commons/wrapper-client-library.html
+++ b/_includes/acs-aem-commons/wrapper-client-library.html
@@ -5,4 +5,6 @@
     <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/blob/master/ui.apps/src/main/content/jcr_root/{{ path }}"
        target="_blank">Wrapper Client Library node definition</a>
     must be used to enable this feature.
+    <br/>
+    Remember to create empty `js.txt` and `css.txt` files directly beneath the wrapper `cq:ClientLibraryFolder` node.
 </div>
