--- a/_includes/acs-aem-commons/jumbotron.html
+++ b/_includes/acs-aem-commons/jumbotron.html
@@ -10,10 +10,10 @@
                     <p class="lead">The wheel doesn't need reinventing</p>
                 </div>
                 <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
-                    class="action-btn">Download the AEM Package</a>
+                    class="action-btn">Download the AEM Packages</a>
             </div>
 
-            <div class="banner">ACS AEM Commons 4.0.0 supports AEM 6.3 and greater!</div>
+            <div class="banner">ACS AEM Commons 4.x supports AEM 6.3 and greater!</div>
         </div>
     </div>
 
