--- a/_includes/shared/who-we-are.html
+++ b/_includes/shared/who-we-are.html
@@ -9,7 +9,8 @@
         </p>
 
         <p>
-            Please note that the name of this Github organization and repository are from a legacy ownership of the this project. Adobe Consulting Services is no longer maintains this project, instead the AEM developer community does.
+            Please note that the name of this Github organization and repository are from a legacy ownership of the this project. 
+            Adobe Consulting Services no longer maintains this project, rather the AEM developer community does.
         </p>
     </div>
 </section>
