--- a/_includes/shared/who-we-are.html
+++ b/_includes/shared/who-we-are.html
@@ -4,8 +4,7 @@
         <h4>Who we are</h4>
 
         <p>
-            We are the AEM developer community.
-            We are developers that like AEM, and like building solutions on top of Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).        
+            We are developers that build things for Adobe products including Adobe Experience Manager (AEM, fka CQ, fka Communique).        
         </p>
 
         <p>
