--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -16,7 +16,7 @@ layout: acs-aem-commons_base
             </nav>
         </header>
 
-        {% if site.data.acs-aem-commons.version == "DISABLED" %}
+        {% if site.data.acs-aem-commons.version == "6.0.0" %}
             <!-- THIS IS TO NEVER EVER EVER BE ENABLED OVER 3/23 - 3/29 of ANY year EVER. PERIOD. -->
             {% include acs-aem-commons/jumbotron-major-release.html %}
         {% else %}
