--- a/_includes/acs-aem-commons/jumbotron-major-release.html
+++ b/_includes/acs-aem-commons/jumbotron-major-release.html
@@ -7,13 +7,13 @@
             <div class="message">
                 <div class="text">
                     <h1>ACS AEM Commons</h1>
-                    <p class="lead">Version 4.0.0 is here!</p>
+                    <p class="lead">Version 6.0.0 is here!</p>
                 </div>
                 <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases"
                     class="action-btn">Download the AEM Package</a>
             </div>
 
-            <div class="banner">ACS AEM Commons 4.0.0 supports AEM 6.3 and greater!</div>
+            <div class="banner">ACS AEM Commons 6 supports<br/>AEM as a Cloud Service and AEM 6.5.10+!</div>
         </div>
     </div>
 
