Replaced Gitter with Github Discussions

--- a/_includes/acs-aem-commons/nav.html
+++ b/_includes/acs-aem-commons/nav.html
@@ -2,9 +2,9 @@
     <li><a href="/acs-aem-commons">ACS AEM Commons</a></li>
     <li><a href="/acs-aem-commons/#features">Features</a></li>
     <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons" target="_blank">GitHub Project</a></li>
+    <li><a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/discussions" target="_blank">Discuss</a></li>
     <li><a href="https://javadoc.io/doc/com.adobe.acs/acs-aem-commons-bundle/latest/index.html" target="_blank">JavaDocs</a></li>
     <li><a href="/acs-aem-commons/pages/contribute.html">Contribute</a></li>
     <li><a href="/acs-aem-commons/pages/compatibility.html">Compatibility</a></li>
-    <li><a href="https://gitter.im/Adobe-Consulting-Services/acs-aem-commons" target="_blank">Chat</a></li>
     <li class="acs-aem-projects"><a href="/"></a>
 </ul>
