--- a/_includes/shared/who-we-are.html
+++ b/_includes/shared/who-we-are.html
@@ -8,6 +8,10 @@
         </p>
 
         <p>
+            This is a free, open source, community owned project. This project is not supported by Adobe Support. Please log any issues with this project to the <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues">project's Github issues</a>.
+        </p>
+
+        <p>
             Please note that the name of this Github organization and repository are from a legacy ownership of the this project. 
             Adobe Consulting Services no longer maintains this project, rather the AEM developer community does.
         </p>
