--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -25,7 +25,11 @@ layout: acs-aem-commons_base
 
     </div>
 
-    {% include acs-aem-commons/news.html %}
+    <section class="news">
+    <div class="container" style="text-align:center;">
+       Please remember, ACS AEM Commons is <em>not</em> supported by Adobe Support. Log any issues to the <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues">project's Github issues</a>.
+    </div>
+    </section>
 
 
     <div class="page content" role="main">
