--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -26,7 +26,7 @@ layout: acs-aem-commons_base
     </div>
 
     <section class="news">
-    <div class="container" style="text-align:center;">
+    <div class="container" style="text-align:center; margin-bottom: .5rem;">
        Please remember, ACS AEM Commons is <em>not</em> supported by Adobe Support. Log any issues to the <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues">project's Github issues</a>.
     </div>
     </section>
