--- a/_layouts/acs-aem-commons_home.html
+++ b/_layouts/acs-aem-commons_home.html
@@ -27,7 +27,7 @@ layout: acs-aem-commons_base
 
     <section class="news">
     <div class="container" style="text-align:center; margin-bottom: 1rem;">
-       Please remember, ACS AEM Commons is <em>not</em> supported by Adobe Support. Log any issues to the <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues">project's Github issues</a>.
+       Please remember, ACS AEM Commons is <em>not</em> supported by Adobe Support. Log any issues to the <a href="https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues"><u>project's Github issues</u></a>.
     </div>
     </section>
 
